fix(css):ensure that colored scrollbars are visible this commit ensures that the scrollbar-color property contains a color argument for its track color. previously only the thumb-color argument was filled

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,7 +30,8 @@ body {
   font-family: var(--font-krub), sans-serif;
   margin: 0;
   padding: 0;
-  scrollbar-color: var(--primary-text);
+  overflow: hidden;
+  scrollbar-color: var(--primary-text) var(--primary-text);
   scrollbar-width: thin;
 }
 
@@ -76,7 +77,7 @@ body {
   margin-top: 7rem;
   flex-direction: row;
   min-width: min-content;
-  scrollbar-color: var(--primary-text);
+  scrollbar-color: var(--primary-text) var(--primary-text);
   scrollbar-width: thin;
 }
 
@@ -105,6 +106,8 @@ body {
   max-width: 70%;
   min-height: 100%;
   order: 1;
+  scrollbar-color: var(--primary-text) var(--primary-text);
+  scrollbar-width: thin;
 }
 
 .left-header {
@@ -287,7 +290,7 @@ body {
   overflow-y: scroll;
   margin-left: 1rem;
   margin-top: 1rem;
-  scrollbar-color: var(--primary-text);
+  scrollbar-color: var(--primary-text) var(--primary-text);
   scrollbar-width: thin;
 }
 
@@ -387,12 +390,18 @@ body {
     width: fit-content;
     max-width: fit-content;
     overflow-x: hidden;
+    overflow-y: visible;
+    scrollbar-width: thin;
+    scrollbar-color: var(--primary-text) var(--primary-text);
   }
   .home {
     flex-direction: column;
     margin: 2em;
     max-width: 100%;
     overflow-x: hidden;
+    overflow-y: visible;
+    scrollbar-width: thin;
+    scrollbar-color: var(--primary-text) var(--primary-text);
   }
   .left-header {
     min-height: 20%;
@@ -406,6 +415,8 @@ body {
     max-width: 80%;
     font-size: x-large;
     padding-top: 1em;
+    scrollbar-width: thin;
+    scrollbar-color: var(--primary-text) var(--primary-text);
   }
   .sidemenu {
     align-items: start;
